--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: CV
+title: CV of Lars
 url: 'http://localhost:4000'
 baseurl: '' #change it according to your repository name
 description: Darstellung meiner beruflichen Laufbahn
