--- a/_data/data.yml
+++ b/_data/data.yml
@@ -66,7 +66,13 @@ experiences:
       time: 2016 - 2019
       company: TEVARIS, Mönchengladbach, Deutschland
       details: |
-        In dieser Firma habe ich meine Ausbildung zum Fachinformatiker - Fachrichtung Anwendungsentwicklung mit einer Gesamtpunktzahl von 85 Punkten (gut) abgeschlossen. Meine Abschlussarbeit hatte die Erstellung einer Aufgabenverwaltung innerhalb eines Tumordokumentationssystems zum Inhalt.
+        - Konzeption und Entwicklung von Software-Komponenten und Microservices in der Programmiersprache Java unter Verwendung aktueller Technologien und Konzepte (u.a. Git, Maven, REST, Spring, Hibernate)
+        - Arbeit im Team unter Verwendung agiler Software-Entwicklungsmethoden (SCRUM)
+        - Datenbankdesign und -entwicklung unter Verwendung von PostgreSQL und Liquibase
+        - Konzeption und Erstellung von grafischen Benutzeroberflächen für Endnutzer
+        - Umsetzung von Qualitätsmaßnahmen, insbesondere projektbegleitende Dokumentation, Durchführung von Funktionstests und Code Reviews, statische Code-Analyse mit SonarQube und Verwendung des Build-Servers Jenkins
+        - Refactoring bestehender Software-Lösungen
+        - Einrichtung und Wartung unternehmensinterner Infrastruktur
 projects:
     title: Projects
     intro: >
@@ -136,5 +142,4 @@ skills:
         level: 10%
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a><br>
-    This Website is published by <a href="https://pages.github.com" target="_blank">GitHub Pages</a>.
+  Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a><br>
