--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -2,6 +2,7 @@ on: ["push"]
 
 jobs:
   ci:
+    name: CI
     runs-on: ubuntu-latest
 
     steps:
@@ -10,10 +11,10 @@ jobs:
 
       - name: Prepare Ruby and Install Gems
         uses: ruby/setup-ruby@v1
-        with: 
+        with:
           ruby-version: 2.6
           bundler-cache: true
-      
+
       - name: Build Jekyll Site
         run: bundle exec jekyll build
 
@@ -22,3 +23,20 @@ jobs:
         with:
           name: jekyll site
           path: _site/
+
+  cd:
+    name: CD
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+      
+      - name: Upload Files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASS }}
