--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
-          name: my-artifact
+          name: jekyll site
       
       - name: Upload Files
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
